# dots-hyprland

./: README.md  package.json
.config/ags/: config_overviewOnly.js
.config/ags/modules/.configuration/: user_options.js
.config/ags/modules/bar/normal/: system.js
.config/ags/scss/: _bar.scss
.config/ags/utils/: monitor.js
.config/hypr/: hypridle.conf  hyprland.conf  hyprlock.conf
.config/hypr/hyprland/: env.conf  general.conf  keybinds.conf  rules.conf
.config/hypr/hyprlock/: locale.sh
installer/: install.py  install.sh  loader.py  pyproject.toml
installer/arch-packages/zd-dots-hyprland-audio/: PKGBUILD
installer/arch-packages/zd-dots-hyprland-basic/: PKGBUILD
installer/arch-packages/zd-dots-hyprland-screen/: PKGBUILD
installer/arch-packages/zd-dots-hyprland-widgets/: PKGBUILD
installer/enums/: command.py
installer/sh/: command.py
installer/sh/checkers/: hyprland.py  yay.py
installer/sh/installers/: hyprland.py  pkg.py  yay.py  zdhpctl.py
installer/sh/runners/: interactive.py  with_retry.py
installer/state/: execution.py
installer/steps/: config.py  folder.py  gnome.py  info.py  options.py  user.py
installer/utils/: env.py  formatting.py  sudo.py
tools/watcher/: config.py  main.py  pyproject.toml
